--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 }
